jitsi/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: jitsi-chat-ingress
  
spec:
  tls:
  - hosts:
    - "jitsi.your-domain"
    secretName: jitsi-chat-tls
  rules:
    - host: jitsi.your-domain
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: myjitsi-jitsi-meet-web
                port:
                  number: 80
